# DeskNote

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  tmp_append_readme.py
.agents/: config.yaml
.agents/plans/: plan-001.yaml
.ai/: arch.md  arch_change_logs.md  change_logs.md  decisions.md  insights.md  plan.md  plans-standard.md  plans.md  prd-001.md  save-safety-model.md  system.md
.ai/change_logs/: 2026-06-03-structure.md
.ai/insights/: it-001-ini-table.md  it-001-ini2arr.md  it-002-shell-mode-entry.md  it-003-target-need-terminology.md
.ai/phases/: phase-10-shell-3.md  phase-10-shell-3c.md  phase-10-shell-4.md  phase-10-shell-index.md
.ai/plans/: phase-11-editor-03-scroll.md  phase-11-editor-05-context-menu.md  phase-11-editor-06-multi-cursor.md  phase-11-index.md  phase-12-markdown-02-semantic-click.md  plan-11-editor-01-text-selection_debug_record.md  plan-11-editor-02-clipboard.md  plan-11-index.md  plan-11-test.md  plan-11-unified-config-entry.md  plan-11a-config-skeleton.md  plan-11a-config-skeleton_done.md  plan-11b-ini2arr-wiring.md  plan-11b-ini2arr-wiring_done.md  plan-11c-01-startup-restore.md  plan-11c-01-startup-restore_done.md  plan-11c-02-menu-edge-reserved.md  plan-11c-03-menu-floating.md  plan-11c-03-menu-floating_done.md  plan-11c-04-cmd103-save-geom.md  plan-11c-04-cmd103-save-geom_done.md  plan-11c-05-drag-end.md  plan-11c-06-tray-hide-restore.md  plan-11c-06-tray-hide-restore_done.md  plan-11c-migrate-writes.md  plan-11c-migrate-writes_done.md  plan-11d-callbacks-cleanup.md  plan-12-editor-01-text-selection_debug_record.md  plan-12-editor-02-clipboard.md  plan-12-editor-03-scroll.md  plan-12-editor-04-undo-redo.md  plan-12-editor-05-context-menu.md  plan-12-editor-06-multi-cursor.md  plan-12-index.md  plan-12-test.md  plan-13-index.md  (+3 more)
.rules/: test.md
docs/: DEVELOPMENT_PLAN_OLD.md  LEARNING_NOTES.md  NOTES_FOUNDATION.md  NOTES_STAGE_2.md  PLAN_OVERVIEW.md  PLAN_STAGE_0-1.md  PLAN_STAGE_2-4.md  PLAN_STAGE_5-11.md  TECH_MD_RENDER.md  architecture.md  readme.md
resources/: desknote.rc
src/: main.c  md_parser.c  md_parser.h  notefile.c  notefile.h  storage.c  storage.h
test/: test_config.c  test_config_edge.c  test_ini2arr.c
(+256 files in other folders)
